--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,13 @@
 <h1>Showing all articles</h1>
 <%= link_to 'New Article', new_article_path %>
-<table>
+<table border="1px">
   <tr>
     <th>Title</th>
     <th>Text</th>
+    <th>Created At</th>
+    <th>Last Updated</th>
+    <th>Number of views</th>
+    <th>Likes</th>
     <th colspan="3"></th>
   </tr>
  
@@ -11,6 +15,10 @@
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
+      <td><%= article.created_at %></td>
+      <td><%= article.updated_at %></td>
+      <td><%= article.count %></td>
+      <td><%= article.like %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Destroy', article_path(article),
