--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,5 +15,6 @@
 
 <%= render 'comments/form' %>
 
+<%= link_to 'Like', article_path(@article) %> 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
