--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,6 +15,12 @@
 
 <%= render 'comments/form' %>
 
-<%= link_to 'Like', article_path(@article) %> 
+<% @article do |article| %>
+    <%= link_to 'Like', 
+
+<% end %>
+
+<%= link_to 'Like', new_like_path %>
+
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
