--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,8 @@
     <th>Created At</th>
     <th>Last Updated</th>
     <th>Number of views</th>
-    <th>Likes</th>
+    <th>Number of likes</th>
+    <th>Number of dislikes</th>
     <th colspan="3"></th>
   </tr>
  
@@ -19,6 +20,7 @@
       <td><%= article.updated_at %></td>
       <td><%= article.count %></td>
       <td><%= article.like %></td>
+      <td><%= article.dislike %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article) %></td>
       <td><%= link_to 'Destroy', article_path(article),
