--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,6 +15,7 @@
 
 <%= render 'comments/form' %>
 
-<%= link_to 'Like', article_path(@article) %> 
+<%= link_to 'Like', like_article_path(@article), class: "vote", method: :put %>
+<%= link_to 'Disike', dislike_article_path(@article), class: "vote", method: :put %>
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
