--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Showing all articles</h1>
+<p><button onclick="sortTable()">Sort</button></p>
 <%= link_to 'New Article', new_article_path %>
-<table border="1px">
+<table border="1px" id = "myTable">
   <tr>
     <th>Title</th>
     <th>Text</th>
@@ -9,6 +10,7 @@
     <th>Number of views</th>
     <th>Number of likes</th>
     <th>Number of dislikes</th>
+    <th>Reset count</th>
     <th colspan="3"></th>
   </tr>
  
@@ -26,6 +28,45 @@
       <td><%= link_to 'Destroy', article_path(article),
                 method: :delete, 
                 data: {confirm: 'Are you sure?'} %></td>
+      <td><%= link_to 'Reset', reset_article_path(article), class: "vote", method: :put %></td>
     </tr>
   <% end %>
 </table>
+
+<script>
+function sortTable() {
+  var table, rows, switching, i, x, y, shouldSwitch;
+  table = document.getElementById("myTable");
+  switching = true;
+  /*Make a loop that will continue until
+  no switching has been done:*/
+  while (switching) {
+    //start by saying: no switching is done:
+    switching = false;
+    rows = table.getElementsByTagName("TR");
+    /*Loop through all table rows (except the
+    first, which contains table headers):*/
+    for (i = 1; i < (rows.length - 1); i++) {
+      //start by saying there should be no switching:
+      shouldSwitch = false;
+      /*Get the two elements you want to compare,
+      one from current row and one from the next:*/
+      x = rows[i].getElementsByTagName("TD")[5];
+      y = rows[i + 1].getElementsByTagName("TD")[5];
+      //check if the two rows should switch place:
+      if (x.innerHTML > y.innerHTML) 
+      {
+        //if so, mark as a switch and break the loop:
+        shouldSwitch= true;
+        break;
+      }
+    }
+    if (shouldSwitch) {
+      /*If a switch has been marked, make the switch
+      and mark that a switch has been done:*/
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+    }
+  }
+}
+</script>
